2009-10-12  Lex Trotman  <elextr(at)gmail(dot)com>

 * build.c
   Ensure that old style build config is not loaded if it does not exist.


2009-10-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, THANKS, src/about.c, src/document.c, src/encodings.c,
   src/interface.c:
   Apply set default encoding for existing files only if the files are
   non-Unicode (patch by Alexey Antipov, thanks).


2009-10-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Move new_styleset() and preprocessor setup code into styleset_c_like().
 * src/highlighting.c:
   Call apply_filetype_properties() from styleset_c_like().


2009-10-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html:
   Improve information about predefined keybindings which are
   commonly used across applications (patch by Lex Trotman, thanks).
 * src/printing.c:
   Enable embedded page setup properties in the (Unix) Print dialog
   on newer GTK versions (closes #2870596).
 * src/highlighting.c:
   Map global types (read from tags files) to keyword style for
   filetype Java.


2009-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c:
   Fix wrong creation of filetype template menu items for custom
   filetypes.
 * src/highlighting.c:
   Use jscript_keyword for SCE_HB[A]_WORD markup styles.
 * src/templates.c:
   Group 'New with template' items by filetype submenu (currently only for
   toolbar menu).
   Show custom file template items before filetype template items.
 * src/templates.c, src/interface.c, src/geanymenubuttonaction.c,
   geany.glade:
   Only use one 'New with template' submenu - reparent as needed.
 * src/templates.c:
   Don't create templates/filetype.none either.
 * src/templates.c:
   Warn if custom template file no longer exists.


2009-09-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/symbols.c:
   Add missing icon for Java packages in the Symbol List.